--- a/app/src/main/res/layout/activity_my_product_list.xml
+++ b/app/src/main/res/layout/activity_my_product_list.xml
@@ -12,12 +12,11 @@
         android:orientation="vertical">
 
         <androidx.cardview.widget.CardView
-            xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:id="@+id/card_view"
             android:layout_gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            card_view:cardCornerRadius="4dp">
+            app:cardCornerRadius="4dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -46,8 +45,8 @@
 
             <ImageView
                 android:id="@+id/drop_downProductId"
-                android:layout_width="20dp"
-                android:layout_height="15dp"
+                android:layout_width="33dp"
+                android:layout_height="wrap_content"
                 android:layout_margin="16dp"
                 android:adjustViewBounds="true"
                 android:scaleType="fitCenter"
